force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/fields/LLC_BI__Frequency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Frequency__c</fullName>
    <description>This field is required. It is manually populated. It indicates the Payment Frequency for a Pricing Payment Component record.</description>
    <label>Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Frequency_Semimonthly</fullName>
            </value>
            <value>
                <fullName>Frequency_Monthly</fullName>
                <default>true</default>
                <label>Frequency_Monthly</label>
            </value>
            <value>
                <fullName>Frequency_Bimonthly</fullName>
            </value>
            <value>
                <fullName>Frequency_Quarterly</fullName>
            </value>
            <value>
                <fullName>Frequency_Semiannually</fullName>
            </value>
            <value>
                <fullName>Frequency_Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>