force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/fields/LLC_BI__Percent_Of_Total_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Percent_Of_Total_Loan_Amount__c</fullName>
    <description>The user manually populates this optional percentage field. It holds the percent of the total loan amount to be pledged towards a P+I payment.</description>
    <label>Percent of Total Loan Amount</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>