force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/fields/LLC_BI__Principal_Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Principal_Payment_Frequency__c</fullName>
    <description>This field is required. It is manually populated. It indicates the frequency requirements for Principal Payments.</description>
    <label>Principal Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Frequency_Monthly</fullName>
                <default>true</default>
                <label>Frequency_Monthly</label>
            </value>
            <value>
                <fullName>Frequency_Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>