force-app/main/default/objects/LLC_BI__Pricing_Payment_Component__c/fields/LLC_BI__Rate_Stream__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Rate_Stream__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The rate stream associated with this payment stream.</description>
    <label>Rate Stream</label>
    <referenceTo>LLC_BI__Pricing_Stream__c</referenceTo>
    <relationshipLabel>Streams</relationshipLabel>
    <relationshipName>Streams</relationshipName>
    <type>Lookup</type>
</CustomField>